# pokemon-agent

./: .gitignore  README.md  pyproject.toml  test_collision.py
pokemon_agent/: autopilot.py  cli.py  collision.py  overlay.py  server.py  sessions.py
pokemon_agent/dashboard/static/: app.js  index.html  style.css
skill/: SKILL.md
