[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pokemon-agent"
version = "0.1.0"
description = "AI-powered Pokemon gameplay agent with headless emulation, REST API, and live dashboard."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Nous Research", email = "team@nousresearch.com"},
]
keywords = ["pokemon", "ai", "agent", "emulator", "gameboy", "gba", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "Pillow>=10.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
pyboy = ["pyboy>=2.0.0"]
pygba = ["pygba>=0.1.0"]
dashboard = ["aiofiles>=23.0.0"]
autopilot = ["openai>=1.40", "requests>=2.28"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.25.0",
    "ruff>=0.1.0",
]
all = [
    "pokemon-agent[pyboy,dashboard,autopilot]",
]

[project.urls]
Homepage = "https://github.com/NousResearch/pokemon-agent"
Repository = "https://github.com/NousResearch/pokemon-agent"
Issues = "https://github.com/NousResearch/pokemon-agent/issues"

[project.scripts]
pokemon-agent = "pokemon_agent.cli:main"

[tool.setuptools.packages.find]
include = ["pokemon_agent*"]

[tool.setuptools.package-data]
"pokemon_agent.dashboard" = ["static/**/*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
